--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "asphalt-8",
+  "name": "asphalt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://aleksandr-tokmashov.github.io/asphalt",
   "scripts": {
     "start": "vite",
     "build": "tsc -b && vite build",
@@ -29,6 +30,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
