--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "antd": "^5.25.2",
+    "chart.js": "^4.4.9",
     "convex-hull": "^1.0.3",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0"
   },
